Added carousel labels for portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -131,6 +131,12 @@
                                         </div>
                                     </div>
                             </div>
+                            <ul class="carousel-labels">
+                                <li class="carousel-label active">Homepage</li>
+                                <li class="carousel-label">Restaurant menu</li>
+                                <li class="carousel-label">Checkout</li>
+                                <li class="carousel-label">Order tracking</li>
+                            </ul>
                             <a class="left carousel-control" href="#bk-main-carousel" role="button" data-slide="prev">
                                 <
                                 <span class="sr-only">Previous</span>
@@ -242,6 +248,10 @@
                                     </div>
                                 </div>
                             </div>
+                            <ul class="carousel-labels">
+                                <li class="carousel-label active">Homepage</li>
+                                <li class="carousel-label">How it works</li>
+                            </ul>
                             <a class="left carousel-control" href="#vendomo-main-carousel" role="button" data-slide="prev">
                                 <
                                 <span class="sr-only">Previous</span>
@@ -355,6 +365,12 @@
                                     </div>
                                 </div>
                             </div>
+                            <ul class="carousel-labels">
+                                <li class="carousel-label active">Overview</li>
+                                <li class="carousel-label">Appointments</li>
+                                <li class="carousel-label">Candidates</li>
+                                <li class="carousel-label">Candidate details</li>
+                            </ul>
                             <a class="left carousel-control" href="#vendomo-crm-main-carousel" role="button" data-slide="prev">
                                 <
                                 <span class="sr-only">Previous</span>
@@ -478,6 +494,12 @@
                                     </div>
                                 </div>
                             </div>
+                            <ul class="carousel-labels">
+                                <li class="carousel-label active">Homepage</li>
+                                <li class="carousel-label">Restaurants list</li>
+                                <li class="carousel-label">Restaurant menu</li>
+                                <li class="carousel-label">Checkout</li>
+                            </ul>
                             <a class="left carousel-control" href="#foodora-main-carousel" role="button" data-slide="prev">
                                 <
                                 <span class="sr-only">Previous</span>
@@ -587,6 +609,12 @@
                                     </div>
                                 </div>
                             </div>
+                            <ul class="carousel-labels">
+                                <li class="carousel-label active">Homepage</li>
+                                <li class="carousel-label">Video catalogue</li>
+                                <li class="carousel-label">Video details</li>
+                                <li class="carousel-label">Video player</li>
+                            </ul>
                             <a class="left carousel-control" href="#timvision-main-carousel" role="button" data-slide="prev">
                                 <
                                 <span class="sr-only">Previous</span>
@@ -657,6 +685,10 @@
                                     </div>
                                 </div>
                             </div>
+                            <ul class="carousel-labels">
+                                <li class="carousel-label active">Homepage</li>
+                                <li class="carousel-label">Music player</li>
+                            </ul>
                             <a class="left carousel-control" href="#cubomusica-main-carousel" role="button" data-slide="prev">
                                 <
                                 <span class="sr-only">Previous</span>
@@ -766,11 +798,6 @@
                                     </div>
                                     <div class="carousel-item tse-scrollable wrapper">
                                         <div class="tse-content">
-                                            <img class="portfolio-item-img-full" src="/img/portfolio/ande-notebook.jpg">
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item tse-scrollable wrapper">
-                                        <div class="tse-content">
                                             <img class="portfolio-item-img-full" src="/img/portfolio/ipo-notebook.jpg">
                                         </div>
                                     </div>
@@ -779,8 +806,22 @@
                                             <img class="portfolio-item-img-full" src="/img/portfolio/ipo2-notebook.jpg">
                                         </div>
                                     </div>
+                                    <div class="carousel-item tse-scrollable wrapper">
+                                        <div class="tse-content">
+                                            <img class="portfolio-item-img-full" src="/img/portfolio/ande-notebook.jpg">
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
+                            <ul class="carousel-labels">
+                                <li class="carousel-label active">Informational website (UNICRI counter-terrorism department)</li>
+                                <li class="carousel-label">Informational website (UNICRI Counter-Terrorism department)</li>
+                                <li class="carousel-label">E-learning website (UN/EU project on sharing counter-terrorism best practices)</li>
+                                <li class="carousel-label">E-learning website (UN/EU project on sharing major events security best practices)</li>
+                                <li class="carousel-label">Informational website (UN programme on security of major events)</li>
+                                <li class="carousel-label">Informational website (UN programme on security of major events)</li>
+                                <li class="carousel-label">Informational website (UN project on anti-corruption in the Andean countries)</li>
+                            </ul>
                             <a class="left carousel-control" href="#unicri-main-carousel" role="button" data-slide="prev">
                                 <
                                 <span class="sr-only">Previous</span>
@@ -896,6 +937,13 @@
                                     </div>
                                 </div>
                             </div>
+                            <ul class="carousel-labels">
+                                <li class="carousel-label active">E-commerce (concept store)</li>
+                                <li class="carousel-label">Corporate website (beach facility)</li>
+                                <li class="carousel-label">Corporate website (Russian school)</li>
+                                <li class="carousel-label">E-commerce (pools and accessories retail)</li>
+                                <li class="carousel-label">E-commerce (industrial noise isolation tools)</li>
+                            </ul>
                             <a class="left carousel-control" href="#others-main-carousel" role="button" data-slide="prev">
                                 <
                                 <span class="sr-only">Previous</span>
