Changed About section

--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
                                 <span class="sr-only">Next</span>
                             </a>
                         </div>
-                        <figure class="portfolio-item-mobile">
+                        <div class="portfolio-item-mobile">
                             <img class="portfolio-item-device-img" src="/img/portfolio/mobile.png">
                             <div class="portfolio-item-img-full-wrapper carousel secondary-carousel slide" id="bk-secondary-carousel" >
                                 <div class="carousel-inner" role="listbox">
@@ -172,7 +172,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </figure>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -261,7 +261,7 @@
                                 <span class="sr-only">Next</span>
                             </a>
                         </div>
-                        <figure class="portfolio-item-mobile">
+                        <div class="portfolio-item-mobile">
                             <img class="portfolio-item-device-img" src="/img/portfolio/mobile.png">
                             <div class="portfolio-item-img-full-wrapper carousel secondary-carousel slide" id="vendomo-secondary-carousel" >
                                 <div class="carousel-inner" role="listbox">
@@ -277,7 +277,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </figure>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -380,7 +380,7 @@
                                 <span class="sr-only">Next</span>
                             </a>
                         </div>
-                        <figure class="portfolio-item-mobile">
+                        <div class="portfolio-item-mobile">
                             <img class="portfolio-item-device-img" src="/img/portfolio/mobile.png">
                             <div class="portfolio-item-img-full-wrapper carousel secondary-carousel slide" id="vendomo-crm-secondary-carousel" >
                                 <div class="carousel-inner" role="listbox">
@@ -406,7 +406,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </figure>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -509,7 +509,7 @@
                                 <span class="sr-only">Next</span>
                             </a>
                         </div>
-                        <figure class="portfolio-item-mobile">
+                        <div class="portfolio-item-mobile">
                             <img class="portfolio-item-device-img" src="/img/portfolio/mobile.png">
                             <div class="portfolio-item-img-full-wrapper carousel secondary-carousel slide" id="foodora-secondary-carousel" >
                                 <div class="carousel-inner" role="listbox">
@@ -535,7 +535,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </figure>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -1362,44 +1362,21 @@
                     Besides coding and being super nerd I also love to do a bunch of other stuff.</p>
             </div>
             <h3 class="about-interest-title-main">My hobbies</h3>
+
             <div class="about-interest">
-                <figure class="about-interest-image">
-                    <img class="me" src="/img/about-meditation.png">
-                </figure>
                 <div class="about-interest-content">
-                    <h3 class="about-interest-title">Meditation</h3>
+                    <h3 class="about-interest-title">Graphic Design</h3>
                     <p>
-                        When I started to learn Zen meditation I was absolutely stunned by the state of intense mental clarity that is possible to achieve with this practice. Since than, meditation and the Mindfulness philosophy has been incredibly useful in many areas of my life, also helping me develop a more selfless approach to my profession, reducing attachment to my own opinions and making me much more open to the ideas of others.
-                    </p>
-                </div>
-            </div>
-            <div class="about-interest">
-                <figure class="about-interest-image">
-                    <img class="me" src="/img/about-salsa.png">
-                </figure>
-                <div class="about-interest-content">
-                    <h3 class="about-interest-title">Salsa dancing</h3>
-                    <p>
-                        Dancing is magic! There is nothing better of a Salsa Friday night after an intense coding week. I love the Caribbean culture, music and atmosphere and I have been dancing Salsa for several years, experimenting also with Bachata, Merengue, Cha-cha, Argentinian Tango and Swing. Strangely enough, I recently realised that dancing and coding have something in common: they both develop intuitive thinking.
-                    </p>
-                </div>
-            </div>
-            <div class="about-interest">
-                <figure class="about-interest-image">
-                    <img class="me" src="/img/about-boxing.png">
-                </figure>
-                <div class="about-interest-content">
-                    <h3 class="about-interest-title">Boxing</h3>
-                    <p>
-                        First time I tried boxing I was terrified, terrified and absolutely thrilled. This initial fear was the strongest motivation to learn I have ever felt. I fell in love with this sport because of the great life lessons it teaches: fair play, respect for your opponent and to never surrender. I always remember that in front of a coding challenge, when tempted to surrender to a quick hack, instead of work harder for the elegant solution.
+                        I was eleven when I got my first computer, it was a super fast 386 PC with 2Mb of RAM, and I was totally fascinated by the most unexpected software: MS Paint! I spent countless hours with it, creating my own graphics, it was magic! Than came Photoshop, Corel Draw, and in 1998 I started my career becoming a web designer. Later I came to love coding even more, but I still open Photoshop and Illustrator quite often, when I need to work with designs on the projects.
+                        My designs:<br/>
+                        <button class="interest-button">Brochures</button>
+                        <button class="interest-button">Posters</button>
+                        <button class="interest-button">Illustrations for kids</button>
                     </p>
                 </div>
             </div>
 
             <div class="about-interest">
-                <figure class="about-interest-image">
-                    <img class="me" src="/img/about-photo.png">
-                </figure>
                 <div class="about-interest-content">
                     <h3 class="about-interest-title">Photography</h3>
                     <p>
@@ -2262,9 +2239,6 @@
             </div>
 
             <div class="about-interest">
-                <figure class="about-interest-image">
-                    <img class="me" src="/img/about-video.png">
-                </figure>
                 <div class="about-interest-content">
                     <h3 class="about-interest-title">Video</h3>
                     <p>
@@ -2280,20 +2254,32 @@
             </div>
 
             <div class="about-interest">
-                <figure class="about-interest-image">
-                    <img class="me" src="/img/about-design.png">
-                </figure>
                 <div class="about-interest-content">
-                    <h3 class="about-interest-title">Graphic design</h3>
+                    <h3 class="about-interest-title">Salsa Dancing</h3>
                     <p>
-                        I was eleven when I got my first computer, it was a super fast 386 PC with 2Mb of RAM, and I was totally fascinated by the most unexpected software: MS Paint! I spent countless hours with it, creating my own graphics, it was magic! Than came Photoshop, Corel Draw, and in 1998 I started my career becoming a web designer. Later I came to love coding even more, but I still open Photoshop and Illustrator quite often, when I need to work with designs on the projects.
-                        My designs:<br/>
-                        <button class="interest-button">Brochures</button>
-                        <button class="interest-button">Posters</button>
-                        <button class="interest-button">Illustrations for kids</button>
+                        Dancing is magic! There is nothing better of a Salsa Friday night after an intense coding week. I love the Caribbean culture, music and atmosphere and I have been dancing Salsa for several years, experimenting also with Bachata, Merengue, Cha-cha, Argentinian Tango and Swing. Strangely enough, I recently realised that dancing and coding have something in common: they both develop intuitive thinking.
                     </p>
                 </div>
             </div>
+
+            <div class="about-interest">
+                <div class="about-interest-content">
+                    <h3 class="about-interest-title">Boxing</h3>
+                    <p>
+                        First time I tried boxing I was terrified, terrified and absolutely thrilled. This initial fear was the strongest motivation to learn I have ever felt. I fell in love with this sport because of the great life lessons it teaches: fair play, respect for your opponent and to never surrender. I always remember that in front of a coding challenge, when tempted to surrender to a quick hack, instead of work harder for the elegant solution.
+                    </p>
+                </div>
+            </div>
+
+            <div class="about-interest">
+                <div class="about-interest-content">
+                    <h3 class="about-interest-title">Meditation</h3>
+                    <p>
+                        When I started to learn Zen meditation I was absolutely stunned by the state of intense mental clarity that is possible to achieve with this practice. Since than, meditation and the Mindfulness philosophy has been incredibly useful in many areas of my life, also helping me develop a more selfless approach to my profession, reducing attachment to my own opinions and making me much more open to the ideas of others.
+                    </p>
+                </div>
+            </div>
+
         </article>
     </section>
 
