Started implementing responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -46,13 +46,21 @@
             <h2 class="section-header-title">Projects</h2>
             <nav class="section-header-nav">
                 <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Projects</button><button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button><button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button><button class="article-header__nav__button" onClick="scrollToElement('#about')">About</button><button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
-                <br/><a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
+                <a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
             </nav>
         </header>
 
         <article class="article-body portfolio-item-bk js-portfolio-item">
             <div class="portfolio-item-desktop portfolio-item">
                 <div class="project-type-label">E-commerce in JavaScript/PHP</div>
+                <div class="portfolio-item-title-wrapper">
+                    <h3 class="portfolio-item-title">Burger King</h3>
+                    <h4 class="portfolio-item-text">Delivery Service</h4>
+                    <h4 class="portfolio-item-secondary-title">Employer:</h4>
+                    <p class="portfolio-item-text">Rocket Internet SE</p>
+                    <h4 class="portfolio-item-secondary-title">Contribution:</h4>
+                    <p class="portfolio-item-text">JavaScript, jQuery, Backbone.js, Lodash, HTML5, Twig, CSS3, SASS, Bootstrap, Photoshop, Grunt, Git</p>
+                </div>
                 <img class="portfolio-item-device-img" src="/img/portfolio/desktop.png">
                 <figure class="portfolio-item-img-preview">
                     <img class="portfolio-item-img" src="/img/portfolio/bk-preview-desktop.jpg">
@@ -80,14 +88,7 @@
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
                 </figure>
             </div>
-            <div class="portfolio-item-title-wrapper">
-                <h3 class="portfolio-item-title">Burger King</h3>
-                <h4 class="portfolio-item-text">Delivery Service</h4>
-                <h4 class="portfolio-item-secondary-title">Employer:</h4>
-                <p class="portfolio-item-text">Rocket Internet SE</p>
-                <h4 class="portfolio-item-secondary-title">Contribution:</h4>
-                <p class="portfolio-item-text">JavaScript, jQuery, Backbone.js, Lodash, HTML5, Twig, CSS3, SASS, Bootstrap, Photoshop, Grunt, Git</p>
-            </div>
+
 
             <div class="portfolio-item-modal-notebook-mobile modal fade" id="bk-modal" 
                  data-modal-src="/html/modal-projects-bk.html" tabindex="-1" role="dialog" aria-labelledby="bk-modalLabel" aria-hidden="true">
@@ -102,6 +103,14 @@
         <article class="article-body portfolio-item-vendomo js-portfolio-item">
             <div class="portfolio-item-desktop">
                 <div class="project-type-label">Website in JavaScript/PHP</div>
+                <div class="portfolio-item-title-wrapper">
+                    <h3 class="portfolio-item-title">Vendomo marketing website</h3>
+                    <h4 class="portfolio-item-text">Real estate startup</h4>
+                    <h4 class="portfolio-item-secondary-title">Employer:</h4>
+                    <p class="portfolio-item-text">Rocket Internet SE</p>
+                    <h4 class="portfolio-item-secondary-title">Contribution:</h4>
+                    <p class="portfolio-item-text">JavaScript, jQuery, HTML5, CSS3, LESS, Gulp, Git, Bootstrap, Photoshop, Illustrator</p>
+                </div>
                 <img class="portfolio-item-device-img" src="/img/portfolio/desktop.png">
                 <figure class="portfolio-item-img-preview">
                     <img class="portfolio-item-img" src="/img/portfolio/vendomo-preview-desktop.jpg">
@@ -129,14 +138,6 @@
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
                 </figure>
             </div>
-            <div class="portfolio-item-title-wrapper">
-                <h3 class="portfolio-item-title">Vendomo marketing website</h3>
-                <h4 class="portfolio-item-text">Real estate startup</h4>
-                <h4 class="portfolio-item-secondary-title">Employer:</h4>
-                <p class="portfolio-item-text">Rocket Internet SE</p>
-                <h4 class="portfolio-item-secondary-title">Contribution:</h4>
-                <p class="portfolio-item-text">JavaScript, jQuery, HTML5, CSS3, LESS, Bootstrap, Photoshop, Illustrator, Gulp, Git</p>
-            </div>
 
             <div class="portfolio-item-modal-notebook-mobile modal fade" id="vendomo-modal"
                  data-modal-src="/html/modal-projects-vendomo.html" tabindex="-1" role="dialog" aria-labelledby="bk-modalLabel" aria-hidden="true">
@@ -151,6 +152,14 @@
         <article class="article-body portfolio-item-vendomo-crm js-portfolio-item">
             <div class="portfolio-item-desktop">
                 <div class="project-type-label">Web app in JavaScript/PHP</div>
+                <div class="portfolio-item-title-wrapper">
+                    <h3 class="portfolio-item-title">Vendomo <br/>CRM dashboard</h3>
+                    <h4 class="portfolio-item-text">Real estate startup</h4>
+                    <h4 class="portfolio-item-secondary-title">Employer:</h4>
+                    <p class="portfolio-item-text">Rocket Internet SE</p>
+                    <h4 class="portfolio-item-secondary-title">Contribution:</h4>
+                    <p class="portfolio-item-text">JavaScript, jQuery, HTML5, CSS3, LESS, Gulp, Git, Bootstrap, Photoshop</p>
+                </div>
                 <img class="portfolio-item-device-img" src="/img/portfolio/desktop.png">
                 <figure class="portfolio-item-img-preview">
                     <img class="portfolio-item-img" src="/img/portfolio/vendomo-crm-preview-desktop.jpg">
@@ -178,14 +187,6 @@
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
                 </figure>
             </div>
-            <div class="portfolio-item-title-wrapper">
-                <h3 class="portfolio-item-title">Vendomo <br/>CRM dashboard</h3>
-                <h4 class="portfolio-item-text">Real estate startup</h4>
-                <h4 class="portfolio-item-secondary-title">Employer:</h4>
-                <p class="portfolio-item-text">Rocket Internet SE</p>
-                <h4 class="portfolio-item-secondary-title">Contribution:</h4>
-                <p class="portfolio-item-text">JavaScript, jQuery, HTML5, CSS3, LESS, Bootstrap, Photoshop, Gulp, Git</p>
-            </div>
 
             <div class="portfolio-item-modal-notebook-mobile modal fade" id="vendomo-crm-modal"
                  data-modal-src="/html/modal-projects-vendomo-crm.html" tabindex="-1" role="dialog" aria-labelledby="bk-modalLabel" aria-hidden="true">
@@ -200,6 +201,14 @@
         <article class="article-body portfolio-item-foodora js-portfolio-item">
             <div class="portfolio-item-desktop">
                 <div class="project-type-label">E-commerce in JavaScript/PHP</div>
+                <div class="portfolio-item-title-wrapper">
+                    <h3 class="portfolio-item-title">Foodora</h3>
+                    <h4 class="portfolio-item-text">Food delivery startup</h4>
+                    <h4 class="portfolio-item-secondary-title">Employer:</h4>
+                    <p class="portfolio-item-text">Rocket Internet SE</p>
+                    <h4 class="portfolio-item-secondary-title">Contribution:</h4>
+                    <p class="portfolio-item-text">JavaScript, jQuery, Backbone.js, Lodash, TDD, HTML, Twig, CSS3, SASS, Grunt, Git, Bootstrap, Photoshop</p>
+                </div>
                 <img class="portfolio-item-device-img" src="/img/portfolio/desktop.png">
                 <figure class="portfolio-item-img-preview">
                     <img class="portfolio-item-img" src="/img/portfolio/foodora-preview-desktop.jpg">
@@ -227,14 +236,6 @@
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
                 </figure>
             </div>
-            <div class="portfolio-item-title-wrapper">
-                <h3 class="portfolio-item-title">Foodora</h3>
-                <h4 class="portfolio-item-text">Food delivery startup</h4>
-                <h4 class="portfolio-item-secondary-title">Employer:</h4>
-                <p class="portfolio-item-text">Rocket Internet SE</p>
-                <h4 class="portfolio-item-secondary-title">Contribution:</h4>
-                <p class="portfolio-item-text">JavaScript, jQuery, Backbone.js, Lodash, TDD, HTML5, Twig, CSS3, SASS, Bootstrap, Photoshop, Grunt, Git</p>
-            </div>
 
             <div class="portfolio-item-modal-notebook-mobile modal fade" id="foodora-modal"
                  data-modal-src="/html/modal-projects-foodora.html" tabindex="-1" role="dialog" aria-labelledby="bk-modalLabel" aria-hidden="true">
@@ -249,6 +250,14 @@
         <article class="article-body portfolio-item-timvision js-portfolio-item">
             <figure class="portfolio-item-tv1">
                 <figcaption class="project-type-label">Smart-TV web app in JavaScript</figcaption>
+                <div class="portfolio-item-title-wrapper-horizontal">
+                    <h3 class="portfolio-item-title">TIMvision</h3>
+                    <h4 class="portfolio-item-text">On demand TV service <br/>for Samsung Smart-TV</h4>
+                    <h4 class="portfolio-item-secondary-title">Employer:</h4>
+                    <p class="portfolio-item-text">Telecom Italia s.p.a</p>
+                    <h4 class="portfolio-item-secondary-title">Contribution:</h4>
+                    <p class="portfolio-item-text">JavaScript, AJAX, HTML5, CSS3, XML, Samsung Web API</p>
+                </div>
                 <img class="portfolio-item-device-img" src="/img/portfolio/samsung-tv.png">
                 <figure class="portfolio-item-img-preview">
                     <img class="portfolio-item-img" src="/img/portfolio/timvision-preview-catalog.jpg">
@@ -262,15 +271,6 @@
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
                 </figure>
             </figure>
-            <div class="portfolio-item-title-wrapper-horizontal">
-                <h3 class="portfolio-item-title">TIMvision</h3>
-                <h4 class="portfolio-item-text">On demand TV service <br/>for Samsung Smart-TV</h4>
-                <h4 class="portfolio-item-secondary-title">Employer:</h4>
-                <p class="portfolio-item-text">Telecom Italia s.p.a</p>
-                <h4 class="portfolio-item-secondary-title">Contribution:</h4>
-                <p class="portfolio-item-text">JavaScript, AJAX, HTML5, CSS3, XML, Samsung Web API</p>
-            </div>
-
             <div class="portfolio-item-modal-tv modal fade" id="timvision-modal"
                  data-modal-src="/html/modal-projects-timvision.html"tabindex="-1" role="dialog" aria-labelledby="bk-modalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -284,6 +284,14 @@
         <article class="article-body portfolio-item-cubomusica js-portfolio-item">
             <figure class="portfolio-item-tv1">
                 <figcaption class="project-type-label">Smart-TV web app in JavaScript</figcaption>
+                <div class="portfolio-item-title-wrapper-horizontal">
+                    <h3 class="portfolio-item-title">CuboMusica</h3>
+                    <h4 class="portfolio-item-text">Music streaming <br/>for Samsung Smart-TV</h4>
+                    <h4 class="portfolio-item-secondary-title">Employer:</h4>
+                    <p class="portfolio-item-text">Telecom Italia s.p.a</p>
+                    <h4 class="portfolio-item-secondary-title">Contribution:</h4>
+                    <p class="portfolio-item-text">JavaScript, AJAX, HTML5, CSS3, XML, Samsung Web API</p>
+                </div>
                 <img class="portfolio-item-device-img" src="/img/portfolio/samsung-tv.png">
                 <figure class="portfolio-item-img-preview">
                     <img class="portfolio-item-img" src="/img/portfolio/cubomusica-preview-player.jpg">
@@ -297,15 +305,6 @@
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
                 </figure>
             </figure>
-            <div class="portfolio-item-title-wrapper-horizontal">
-                <h3 class="portfolio-item-title">CuboMusica</h3>
-                <h4 class="portfolio-item-text">Music streaming <br/>for Samsung Smart-TV</h4>
-                <h4 class="portfolio-item-secondary-title">Employer:</h4>
-                <p class="portfolio-item-text">Telecom Italia s.p.a</p>
-                <h4 class="portfolio-item-secondary-title">Contribution:</h4>
-                <p class="portfolio-item-text">JavaScript, AJAX, HTML5, CSS3, XML, Samsung Web API</p>
-            </div>
-
             <div class="portfolio-item-modal-tv modal fade" id="cubomusica-modal"
                  data-modal-src="/html/modal-projects-cubomusica.html" tabindex="-1" role="dialog" aria-labelledby="bk-modalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -317,7 +316,7 @@
         </article>
 
         <article class="article-body portfolio-item-unicri js-portfolio-item">
-            <div class="portfolio-item-notebook-ande">
+            <div class="portfolio-item-notebook notebooks-set-item1">
                 <span class="project-type-label">Website</span>
                 <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
                 <figure class="portfolio-item-img-preview">
@@ -325,7 +324,7 @@
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
                 </figure>
             </div>
-            <div class="portfolio-item-notebook-eusec">
+            <div class="portfolio-item-notebook notebooks-set-item2">
                 <span class="project-type-label">Website</span>
                 <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
                 <figure class="portfolio-item-img-preview">
@@ -333,7 +332,7 @@
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
                 </figure>
             </div>
-            <div class="portfolio-item-notebook-cbrn">
+            <div class="portfolio-item-notebook notebooks-set-item3">
                 <span class="project-type-label">E-learning</span>
                 <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
                 <figure class="portfolio-item-img-preview">
@@ -341,7 +340,7 @@
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
                 </figure>
             </div>
-            <div class="portfolio-item-notebook-ipo">
+            <div class="portfolio-item-notebook notebooks-set-item4">
                 <span class="project-type-label">E-learning</span>
                 <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
                 <figure class="portfolio-item-img-preview">
@@ -349,7 +348,7 @@
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
                 </figure>
             </div>
-            <div class="portfolio-item-notebook-lab">
+            <div class="portfolio-item-notebook notebooks-set-item5">
                 <span class="project-type-label">Website</span>
                 <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
                 <figure class="portfolio-item-img-preview">
@@ -377,7 +376,7 @@
 
         <article class="article-body portfolio-item-others js-portfolio-item">
 
-            <div class="portfolio-item-notebook-school">
+            <div class="portfolio-item-notebook notebooks-set-item1">
                 <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
                 <span class="project-type-label">Website</span>
                 <figure class="portfolio-item-img-preview">
@@ -385,7 +384,7 @@
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
                 </figure>
             </div>
-            <div class="portfolio-item-notebook-davide">
+            <div class="portfolio-item-notebook notebooks-set-item2">
                 <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
                 <span class="project-type-label">E-commerce</span>
                 <figure class="portfolio-item-img-preview">
@@ -393,7 +392,7 @@
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
                 </figure>
             </div>
-            <div class="portfolio-item-notebook-milena">
+            <div class="portfolio-item-notebook notebooks-set-item3">
                 <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
                 <span class="project-type-label">Website</span>
                 <figure class="portfolio-item-img-preview">
@@ -401,7 +400,7 @@
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
                 </figure>
             </div>
-            <div class="portfolio-item-notebook-pandora">
+            <div class="portfolio-item-notebook notebooks-set-item4">
                 <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
                 <span class="project-type-label">E-commerce</span>
                 <figure class="portfolio-item-img-preview">
@@ -409,7 +408,7 @@
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
                 </figure>
             </div>
-            <div class="portfolio-item-notebook-acqua">
+            <div class="portfolio-item-notebook notebooks-set-item5">
                 <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
                 <span class="project-type-label">E-commerce</span>
                 <figure class="portfolio-item-img-preview">
